Declaration checkbox styling. - Fixed layout error on mobile.

--- a/c3/app/assets/carers-allowance.scss
+++ b/c3/app/assets/carers-allowance.scss
@@ -1253,7 +1253,7 @@ main {
 		   input {
 			   position: absolute;
 			   top: 17px;
-			   left: 1.4em;
+			   left: 1.1em;
 			   &[type=checkbox]:checked + label {
 				   background: #fff;
 				   -webkit-transition: all 200ms ease-in;
